<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">PetDiary</string>
    <!-- Activity Main -->
    <string name="add_button">add button</string>
    <string name="fab">\u200B</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- Activity Review Homepage -->
    <string name="toolbar_Product_Reviews">Pet Product Reviews </string>
    <string name="notification_icon_description">notification</string>
    <string name="Browse_product_by_pet_types">Browse product by pet types</string>
    <string name="most_reviews_products">5 Most Reviewed Products</string>
...
    <string name="title_activity_main">MainActivity</string>
    <string name="back_button">back_button</string>

    <string-array name="usage_options" tools:ignore="InconsistentArrays">
        <item>Select Usage Product</item>
        <item>Using this product for the first time</item>
        <item>1 week - 1 month</item>
        <item>2 – 6 months</item>
        <item>More than one year</item>
        <item>Less than a week</item>
    </string-array>

    <string-array name="article_category">
        <item>Select Article Category</item>
...
