...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxBackgroundMode="none"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reviewEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:background="@drawable/background_icon_home"
                        android:gravity="top"
                        android:hint="@string/write_you_review_here"
...
                android:textSize="14sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                app:iconGravity="textStart" />

            <Button
                android:id="@+id/next_button_to_recommend_product"
                android:layout_width="150dp"
                android:layout_height="54dp"
                android:layout_margin="15dp"
                android:text="@string/next"
                android:textAlignment="gravity"
                android:textSize="14sp"
...
