...
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/image_blank_cd"
                app:srcCompat="@drawable/contoh_product_image" />

            <TextView
                android:id="@+id/product_brand_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
...
                android:fontFamily="@font/roboto_bold"
                android:text="@string/adult_persian"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/for_what_pet_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto"
                android:text="@string/for_cat"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/product_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/roboto"
                android:text="@string/health"
...
